# STM32CubeMX

./: .gitignore
Create_Task/: .mxproject  Create_Task.ioc
Create_Task/Core/Src/: main.c
Create_Task/MDK-ARM/: Create_Task.uvoptx  Create_Task.uvprojx
lvgl/: .gitignore  CMakeLists.txt  README.md  main.c
lvgl/lvgl_src/: .gitignore  CMakeLists.txt  lv_conf.h  lv_drv_conf.h
lvgl/lvgl_src/gui/: CMakeLists.txt  gui.c  gui.h
lvgl/lvgl_src/lv_drivers/: CMakeLists.txt
lvgl/lvgl_src/lvgl/: CMakeLists.txt
lvgl/lvgl_src/lvgl/env_support/cmake/: custom.cmake
